<resources>
    <string name="app_name">automotive octo engine</string>

    <!--Page titles-->
    <string name="login_page_title">Login</string>
    <string name="home_page_title">Home</string>
    <string name="register_page_title">Register</string>
    <string name="settings_page_title">Settings</string>
    <string name="calibrate_page_title">Calibrate</string>
    <string name="history_page_title">History</string>
    <string name="account_page_title">Account</string>

    <!--Text labels-->
    <string name="text_username">Username</string>string>
    <string name="text_password">Password</string>string>
    <string name="text_login">Login</string>string>
    <string name="text_enter_username">Username</string>
    <string name="text_enter_email">Email</string>
    <string name="text_enter_first_name">First name</string>
    <string name="text_enter_last_name">Last name</string>
    <string name="text_enter_password">Password</string>
    <string name="text_confirm_password">Confirm</string>

    <string name="text_account_details">Account Details</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_deactivate_account">Deactivate Account</string>
    <string name="text_old_password">Old Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_confirm_new_password">Confirm Password</string>
    <string name="text_check_to_deactivate_account">Check box to deactivate account</string>
    <string name="text_image_quality">Image Quality</string>
    <string name="text_image_compression">Image Compression</string>
    <string name="text_monitoring">Monitoring</string>
    <string name="text_frequency">Frequency</string>
    <string name="text_choose_camera">Choose camera</string>

    <!--Button labels-->
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_submit">Submit</string>
    <string name="button_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_calibrate">Calibrate</string>
    <string name="button_history">History</string>
    <string name="button_logout">Logout</string>
    <string name="button_account">Account</string>
    <string name="button_update_account">Update Account</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_deactivate">Deactivate</string>
    <string name="button_save">Save</string>

    <string name="radio_low">Low</string>
    <string name="radio_medium">Medium</string>
    <string name="radio_high">High</string>
    <string name="radio_front">Front</string>
    <string name="radio_back">Back</string>
</resources>
